# spacy

./: .dockerignore  .editorconfig  .env.example  .gitignore  README.md  flake.nix  justfile  pyproject.toml  pyrefly.toml  ruff.toml  ty.toml
docker/: DockerFile1  my_compose.yml
src/scripts/: main.py  spa_1.py
tests/: test_main.py
